# llvm-JIT-compiler

./: .gitignore  AST.cpp  AST.h  CMakeLists.txt  README.md  lexer.cpp  lexer.h  llvm_ir.cpp  test.cpp
